# md-browser

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/skills/: app-orchestration.md  editor-core.md  mermaid.md  multi-window.md  raw-mode.md  rust-backend.md  search.md  settings-theme.md  sidebar-filetree.md  styling.md  table-support.md  tabs.md  toc.md
docs/superpowers/plans/: 2026-04-14-markdown-editor.md  2026-04-23-prosemirror-wysiwyg.md
docs/superpowers/specs/: 2026-04-14-markdown-editor-design.md  2026-04-23-prosemirror-wysiwyg-design.md
src/: app.ts  resize.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  macos_open_files.rs  main.rs
src-tauri/src/commands/: export.rs  font.rs  fs.rs  git.rs  image.rs  mod.rs  open.rs  window.rs
src/editor/: decorations.ts  image-handler.ts  index.ts  mermaid-view.ts  parser.ts  patch.ts  plugins.ts  schema.ts  serializer.ts  widgets.ts
src/editor/__tests__/: parser.test.ts  roundtrip.test.ts  schema.test.ts  serializer.test.ts  smoke.test.ts
src/editor/__tests__/fixtures/: basic.md  code-blocks.md  html-block.md  html-inline.md  mixed.md  nested-lists.md  tables.md
src/icons/: index.ts
src/search/: index.ts
src/settings/: index.ts
src/sidebar/: file-tree.ts  index.ts
src/styles/: base.css
src/tabs/: index.ts  tab-bar.ts  tab-state.ts
src/themes/: dark.css  light.css  loader.ts
src/toc/: index.ts
