[package]
name = "md-browser"
version = "0.1.0"
edition = "2021"

[lib]
name = "md_browser_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
font-kit = "0.14"
tauri-plugin-single-instance = "2"
urlencoding = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["bitflags", "NSAppleEventDescriptor", "NSAppleEventManager", "NSString", "NSURL", "NSData", "NSObject", "objc2-core-services"] }
